# cv_edu

./: .gitignore  .pre-commit-config.yaml  README.md  client.py  commands.py  docker-compose.yaml  export_model.py  infer.py  pyproject.toml  requirements.txt  run_server.py  train.py
.dvc/: config
configs/: classification_config.yaml  export.yaml  infer.yaml  logger.yaml  train.yaml
configs/data/: flowers.yaml
configs/model/: lenet.yaml
configs/task/: clf.yaml
cv_models/dataset/: flowers_dataset.py  utils.py
cv_models/models/: classifiers.py  utils.py
cv_models/tools/: configs.py
data/: .gitignore  flowers.dvc
data/flowers/: tiny_splits.csv
model_repository/: assets.dvc
model_repository/ensemble-onnx/: config.pbtxt
model_repository/onnx-lenet/: config.pbtxt
model_repository/onnx-lenet/1/: model.onnx.dvc
model_repository/python-transform/: config.pbtxt
model_repository/python-transform/1/: model.py
nano-cv/: utils.py
nano-cv/models/: lenet.py
nano_cv/dataset/: utils.py
nano_cv/models/: classifiers.py  utils.py  vanilla_gan.py
nano_cv/tools/: configs.py
notebooks/: GAN_for_cats_train.ipynb
src/dataset/: flowers_dataset.py
src/models/: lenet.py  vanilla_gan.py
weights/: .gitignore  lenet_flowers.dvc  lenet_flowers_classification.pth.dvc
